Changed About and Founders Page

--- a/founderspage.html
+++ b/founderspage.html
@@ -38,6 +38,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrapap.min.js"></sc
     </div>
   </nav>
 
+<!--
 <p id="demo"></p>
 <script>
 var d = new Date();
@@ -45,6 +46,7 @@ document.getElementById("demo").innerHTML = d.tostring();
 </script>
   <button class="waves-effect waves-light btn" type="button" onclick="document.getElementById('demo').innerHTML=Date()">
 Click on me to display Date and Time</button>
+-->
 
 <h5><center>The Founders of World Without Walls Messaging Website.</center></h5>
 
@@ -59,13 +61,13 @@ Click on me to display Date and Time</button>
 
 <p>We are three programmers that collaborated on this idea on how we could make this website called World Without Walls. The purpose of the website is to make an instant message penpal with special tools like the ability to translate words or phrases,speech to text, and grammar/spelling coreection.We came up with the idea for the website and ran with it, to develop the messaging website known as World Without Walls.</p><br><br>
 
-<p> RYAN:I am a programmer.</p><br>
+<p> RYAN: <p>Congue nec velit. Eget sed quam libero egestas vel a elit suspendisse vestibulum vitae egestas. Purus libero velit id quis nascetur. At ultricies vestibulum et eros sem. Massa fusce a.</p><br>
 
 <p> KHA:I am a programmer. He created the IOS app called Prioto, a productivity app,for people to use to boost their productivity.</p><br>
-<p>Click here for <a href="https://reservations.github.io/prioto/"> more information about Prioto.</a></p>
-<p>Click here for <a href="https://itunes.apple.com/us/app/prioto-boost-productivityshort-long-term/id1142814748?mt=8"> a link to go and download the Prioto app for IOS</a></p><br>
+<p>Click here for <a href="https://reservations.github.io/Prioto/"> more information about Prioto.</a></p>
+<p>Click here for <a href="https://itunes.apple.com/us/app/prioto-boost-productivity/id1142814748?mt=8"> a link to go and download the Prioto app for IOS</a></p><br>
 
-<p> My name is Kyle Seid Phan and I am a programmer.</p><br>
+<p> My name is Kyle Seid Phan. At semper ac sed in blandit dui cras amet sed justo vestibulum. Donec suspendisse viverra id ut impedit. Eget dolor lacus. Ut amet maecenas ut suspendisse enim. Eleifend etiam quis ut dui porta lacus non elit molestie in nec. Nulla suspendisse elit. Nec in morbi. Iaculis torquent dolor. Elementum convallis a nunc amet odit. Rutrum vivamus ac eaque nec turpis.</p></p><br>
 
 </body><br>
 
