Add script that allows us to know what the user's os is.

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
     <script src="scripts/pages/dashboard.js"></script>
 
     <!-- Modules that add specific functionality. -->
+    <script src="scripts/get-os-details.js"></script>
     <script src="scripts/bind-signout-button.js" buttonid="sign-out"></script>
     <script src="scripts/bind-signout-button.js" buttonid="sign-out-mobile"></script>
     <script src="scripts/bind-conversation-list.js" conversationlistid="conversation-list"></script>
