--- a/index.html
+++ b/index.html
@@ -39,9 +39,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-
-
-
 </head>
 
 <body>
@@ -76,6 +73,20 @@
     <div class="row">
         <div id="sidebar" class="col s12 m2 l2 teal white-text">
             Conversations
+            <br>
+            <div class="preloader-wrapper active" id="conversations-preloader">
+                <div class="spinner-layer spinner-red-only">
+                    <div class="circle-clipper left">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="gap-patch">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="circle-clipper right">
+                        <div class="circle"></div>
+                    </div>
+                </div>
+            </div>
             <div id="conversation-list" class="collection z-depth-3">
                 <!--Here I hardcoded some conversation links (link to conversation.html and passing in a user ID, which are also hardcoded)-->
                 <!-- <a href="index.html?targetUID=miTtPwEyWBcfuLcauRuMhzyiqjQ2" class="collection-item" onclick="function()"><span class="new badge">4</span>Ryan Anderson</a>
@@ -85,8 +96,21 @@
             </div>
         </div>
         <div id="chat-container" class="col s12 m10 l10">
-            Chat
+            <center>Chat</center>
             <div id="chat" class="card z-depth-3">
+              <div class="preloader-wrapper active" id="chat-preloader">
+                  <div class="spinner-layer spinner-red-only">
+                      <div class="circle-clipper left">
+                          <div class="circle"></div>
+                      </div>
+                      <div class="gap-patch">
+                          <div class="circle"></div>
+                      </div>
+                      <div class="circle-clipper right">
+                          <div class="circle"></div>
+                      </div>
+                  </div>
+              </div>
                 <div id="messages">
                     <span id="message-filler"></span>
                 </div>
@@ -122,7 +146,7 @@
                 <h4>Add a conversation.</h4>
                 <div class="input-field inline">
                     <input id="email-field" type="email" class="validate">
-                    <label for="email-field" data-error="wrong" data-success="right">Email</label>
+                    <label for="email-field" data-error="Email formatted incorrectly" data-success="">Email</label>
                 </div>
                 <button id="add-conversation-button" class="teal btn waves-effect waves-light">Add Conversation</button>
             </div>
