Enable sending images

--- a/index.html
+++ b/index.html
@@ -126,6 +126,13 @@
                         <button id="submit" disabled type="submit" class="btn waves-light waves-effect red lighten-1">Send
                           <i class="material-icons right">send</i>
                         </button>
+                        <button id="submitImage" class="btn waves-light waves-effect red lighten-1" title="Add an image.">
+                          <i class="material-icons center">image</i>
+                        </button>
+
+                    </form>
+                    <form id="image-form" action="#">
+                      <input id="mediaCapture" type="file" accept="image/*,capture=camera" hidden>
                     </form>
                 </div>
             </div>
