No conversation loaded yet ui tamed

--- a/index.html
+++ b/index.html
@@ -110,13 +110,7 @@
                 <div id="messages">
                     <span id="message-filler"></span>
                 </div>
-                <div class="row">
-                    <div class="col s9 m3 l3">
-                        <div class="card-panel teal" hidden id="nothing-to-display">
-                            <p class="white-text center-align">No conversation loaded</p>
-                        </div>
-                    </div>
-                </div>
+
                 <div id="message-interaction">
                     <form id="message-form" action="#">
                         <div class="input-field inline" id="message-input">
@@ -137,6 +131,19 @@
                 </div>
             </div>
         </div>
+
+        <!-- <div class="row"> -->
+            <div class="col s12 m10 l10">
+                <div class="card-panel red" hidden id="nothing-to-display">
+                    <p class="white-text center-align">Nothing to show yet :)</p>
+                    <p class="white-text center-align">Click on a conversation</p>
+                    <p class="white-text center-align">Or click <a href="#add-conversation">here</a> to add a conversation</p>
+
+
+
+                </div>
+            </div>
+        <!-- </div> -->
 
         <!-- Floating Action Button  -->
         <div class="fixed-action-btn">
