--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
             <div class="col s12 m10 l10">
                 <div class="card-panel red" hidden id="nothing-to-display">
                     <p class="white-text center-align">Nothing to show yet :)</p>
-                    <p class="white-text center-align">Click on a conversation</p>
-                    <p class="white-text center-align">Or click <a href="#add-conversation">here</a> to add a conversation</p>
+                    <p class="white-text center-align">Click a conversation on the left</p>
+                    <p class="white-text center-align">Or click <a href="#add-conversation">here</a> to start one.</p>
 
 
 
