Conversation list and chat messages are not translated

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         <div id="sidebar" class="col s12 m2 l2 teal white-text">
             Conversations
             <br>
+            <span class="notranslate">
             <div class="preloader-wrapper active" id="conversations-preloader">
                 <div class="spinner-layer spinner-red-only">
                     <div class="circle-clipper left">
@@ -97,12 +98,15 @@
                     </div>
                 </div>
             </div>
+
             <div id="conversation-list" class="collection z-depth-3">
 
             </div>
+          </span>
         </div>
         <div id="chat-container" class="col s12 m10 l10">
             <center>Chat</center>
+            <span class="notranslate">
             <div id="chat" class="card z-depth-3">
               <div class="preloader-wrapper active" id="chat-preloader">
                   <div class="spinner-layer spinner-red-only">
@@ -140,6 +144,7 @@
                     </form>
                 </div>
             </div>
+          </span>
         </div>
 
         <!-- <div class="row"> -->
