Stuff inside the non-translated blocks that should actually be translated are now translated. Includes the Message... text and the word send in the send button

--- a/index.html
+++ b/index.html
@@ -129,9 +129,10 @@
                     <form id="message-form" action="#">
                         <div class="input-field inline" id="message-input">
                             <input type="text" id="message">
-                            <label for="message">Message...</label>
+                            <label for="message"><span class="translate">Message...</span></label>
                         </div>
-                        <button id="submit" disabled type="submit" class="btn waves-light waves-effect red lighten-1">Send
+                        <button id="submit" disabled type="submit" class="btn waves-light waves-effect red lighten-1">
+                          <span class="translate">Send</span>
                           <i class="material-icons right">send</i>
                         </button>
                         <button id="submitImage" class="btn waves-light waves-effect red lighten-1" title="Add an image.">
@@ -162,8 +163,9 @@
 
         <!-- Floating Action Button  -->
         <div class="fixed-action-btn">
-
-            <a class="btn-floating btn-large waves-effect waves-light red lighten-1" href="#add-conversation"><i class="material-icons">add</i></a>
+            <a class="btn-floating btn-large waves-effect waves-light red lighten-1" href="#add-conversation">
+              <i class="material-icons"><span class="notranslate">add</span></i>
+            </a>
         </div>
         <!-- Add Conversation Modal -->
         <div id="add-conversation" class="modal">
