--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
     <!-- Navbar  -->
+    <span class="notranslate">
     <ul id="user-dropdown" class="dropdown-content">
         <li>
             <a id="sign-out">Sign-out</a>
@@ -78,6 +79,7 @@
             </ul>
         </div>
     </nav>
+    </span>
 
     <!-- Content -->
     <div class="row">
