--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Improve your foreign language skills by chatting with native speakers your age.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Without Walls</title>
+    <span class="notranslate"><title>World Without Walls</title></span>
     <link rel="stylesheet" type="text/css" href="styles/dashboard.css">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
 
