Added a translate module. FOR FREEEEE

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <span class="notranslate"><title>World Without Walls</title></span>
     <link rel="stylesheet" type="text/css" href="styles/dashboard.css">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
 
     <!-- Disable tap highlight on IE -->
@@ -197,6 +198,9 @@
         };
         firebase.initializeApp(config);
     </script>
+    
+    <script src="scripts/ez-translate.js"></script>
+
     <!-- The main page script -->
     <script src="scripts/pages/dashboard.js"></script>
 
