Fix bug where clicking on the ADD button instantly tries to add a conversation with a blank email

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
         <div id="conversation-list" class="collection z-depth-3">
         </div>
         </span>
-        <a id="add-conversation-button" class="btn-large waves-effect waves-light red lighten-1" href="#add-conversation">Add <i class=" notranslate material-icons">people</i></a>
+        <a id="add-people-button" class="btn-large waves-effect waves-light red lighten-1" href="#add-conversation">Add <i class=" notranslate material-icons">people</i></a>
         </a>
     </div>
     <div id="chat-container" class="col s12 m10 l10">
@@ -178,7 +178,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
             <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Done</a>
         </div>
     </div>
-    
+
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
     <script>
