--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <span class="notranslate"><title>World Without Walls</title></span>
     <link rel="stylesheet" type="text/css" href="styles/dashboard.css">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-
+<!--     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+ -->
 
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no">
