--- a/dashboard.html
+++ b/dashboard.html
@@ -43,18 +43,21 @@
 
 <body>
 
-<div id="google_translate_element"></div>
+    <div id="google_translate_element"></div>
 
-<script type="text/javascript">
-function googleTranslateElementInit() {
-new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
-}
-</script>
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'en',
+                layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+            }, 'google_translate_element');
+        }
+    </script>
 
-<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
-<!-- Navbar  -->
-<span class="notranslate">
+    <!-- Navbar  -->
+    <span class="notranslate">
 <ul id="user-dropdown" class="dropdown-content">
     <li>
         <a id="sign-out">Sign-out</a>
@@ -81,12 +84,12 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
 </nav>
 </span>
 
-<!-- Content -->
-<div class="row">
-    <div id="sidebar" class="col s12 m12 l2 teal white-text">
-        Conversations
-        <br>
-        <span class="notranslate">
+    <!-- Content -->
+    <div class="row">
+        <div id="sidebar" class="col s12 m12 l2 teal white-text">
+            Conversations
+            <br>
+            <span class="notranslate">
         <div class="preloader-wrapper active" id="conversations-preloader">
             <div class="spinner-layer spinner-red-only">
                 <div class="circle-clipper left">
@@ -104,12 +107,12 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
         <div id="conversation-list" class="collection z-depth-3">
         </div>
         </span>
-        <a id="add-people-button" class="btn-large waves-effect waves-light red lighten-1" href="#add-conversation">Add <i class=" notranslate material-icons">people</i></a>
-        </a>
-    </div>
-    <div id="chat-container" class="col s12 m12 l10">
-        <center>Chat</center>
-        <span class="notranslate">
+            <a id="add-people-button" class="btn-large waves-effect waves-light red lighten-1" href="#add-conversation">Add <i class=" notranslate material-icons"> people</i></a>
+            </a>
+        </div>
+        <div id="chat-container" class="col s12 m12 l10">
+            <center>Chat</center>
+            <span class="notranslate">
         <div id="chat" class="card z-depth-3">
             <div class="preloader-wrapper active" id="chat-preloader">
                 <div class="spinner-layer spinner-red-only">
@@ -126,42 +129,39 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
             </div>
             <div id="messages">
                 <span id="message-filler"></span>
-            </div>
+        </div>
 
-            <div id="message-interaction">
-                <form id="message-form" action="#">
-                    <div class="input-field inline" id="message-input">
-                        <input type="text" id="message">
-                        <label for="message"><span class="translate">Message...</span></label>
-                    </div>
-                    <button id="submit" disabled type="submit" class="btn waves-light waves-effect red lighten-1">
+        <div id="message-interaction">
+            <form id="message-form" action="#">
+                <div class="input-field inline" id="message-input">
+                    <input type="text" id="message">
+                    <label for="message"><span class="translate">Message...</span></label>
+                </div>
+                <button id="submit" disabled type="submit" class="btn waves-light waves-effect red lighten-1">
                         <span class="translate">Send</span>
                         <i class="material-icons right">send</i>
                     </button>
-                    <button id="submitImage" class="btn waves-light waves-effect red lighten-1" title="Add an image.">
+                <button id="submitImage" class="btn waves-light waves-effect red lighten-1" title="Add an image.">
                         <i class="material-icons center">image</i>
                     </button>
 
-                </form>
-                <form id="image-form" action="#">
-                    <input id="mediaCapture" type="file" accept="image/*,capture=camera" hidden>
-                </form>
-            </div>
+            </form>
+            <form id="image-form" action="#">
+                <input id="mediaCapture" type="file" accept="image/*,capture=camera" hidden>
+            </form>
         </div>
-        </span>
+    </div>
+    </span>
     </div>
 
     <!-- <div class="row"> -->
-        <div class="col s12 m10 l10">
-            <div class="card-panel red" hidden id="nothing-to-display">
-                <p class="white-text center-align">Nothing to show yet :)</p>
-                <p class="white-text center-align">Click a conversation on the left</p>
-                <p class="white-text center-align">Or click <a href="#add-conversation">here</a> to start one.</p>
-
-
-
-            </div>
+    <div class="col s12 m12 l10">
+        <div class="card-panel" style="margin-top: 33px;" hidden id="nothing-to-display">
+            <p class="center-align">Nothing to show yet :)</p>
+            <p class="center-align">Click a conversation on the left</p>
+            <p class="center-align">Or click <a style="color: red;" href="#add-conversation">here</a> to start one.</p>
         </div>
+    </div>
     <!-- Add Conversation Modal -->
     <div id="add-conversation" class="modal">
         <div class="modal-content">
@@ -170,7 +170,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
                 <input id="email-field" type="email" class="validate">
                 <label for="email-field" data-error="Email formatted incorrectly" data-success="">Email</label>
             </div>
-            <button id="add-conversation-button" class="teal btn waves-effect waves-light">Add Conversation</button>
+            <button id="add-conversation-button" class="red lighten-1 btn waves-effect waves-light">Add Conversation</button>
         </div>
         <div class="modal-footer">
             <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Done</a>
@@ -190,11 +190,19 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
         };
         firebase.initializeApp(config);
     </script>
-    
+
     <script src="scripts/ez-translate.js"></script>
 
     <!-- The main page script -->
     <script src="scripts/pages/dashboard.js"></script>
+
+    <!--get user info-->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jstimezonedetect/1.0.4/jstz.min.js'></script>
+    <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/moment.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.11/moment-timezone-with-data-2010-2020.min.js'></script>
+    <script src="scripts/user-info.js"></script>
+
+
 
     <!-- Modules that add specific functionality. -->
     <script src="scripts/get-os-details.js"></script>
@@ -205,7 +213,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
     <script src="scripts/add-conversation.js"></script>
 
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
             $('.modal').modal();
         });
