Complete functional translate ui beneath message field

--- a/dashboard.html
+++ b/dashboard.html
@@ -168,7 +168,7 @@
               <div>
                 <span>
                   <div class="input-field col s12">
-                    <select id='my-cool-select' class="browser-default">
+                    <select id='sourceLangSelect' class="browser-default">
                       <option value="" disabled selected>Source Language</option>
                       <option value="en">English</option>
                       <option value="es">Spanish</option>
@@ -180,7 +180,7 @@
                 </span>
                 <span>
                   <div class="input-field col s12">
-                    <select id='my-cool-select' class="browser-default">
+                    <select id='targetLangSelect' class="browser-default">
                       <option value="" disabled selected>Target Language</option>
                       <option value="en">English</option>
                       <option value="es">Spanish</option>
@@ -267,6 +267,7 @@
     <script src="scripts/bind-conversation-list.js" conversationlistid="conversation-list"></script>
     <script src="scripts/bind-messages.js"></script>
     <script src="scripts/add-conversation.js"></script>
+    <script src="scripts/bind-translate.js"></script>
 
     <script>
 
