--- a/dashboard.html
+++ b/dashboard.html
@@ -45,14 +45,14 @@
 
     <div id="google_translate_element"></div>
 
-    <script type="text/javascript">
+    <!--<script type="text/javascript">
         function googleTranslateElementInit() {
             new google.translate.TranslateElement({
                 pageLanguage: 'en',
                 layout: google.translate.TranslateElement.InlineLayout.SIMPLE
             }, 'google_translate_element');
         }
-    </script>
+    </script>-->
 
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
@@ -127,10 +127,7 @@
                     </div>
                 </div>
             </div>
-            <div id="messages">
-                <span id="message-filler"></span>
-        </div>
-
+            <div id="messages"><span id="message-filler"></span></div>
         <div id="message-interaction">
             <form id="message-form" action="#">
                 <div class="input-field inline" id="message-input">
@@ -162,49 +159,52 @@
               <option value="ca">Catalan</option>
               <option value="zh-CN">Chinese</option>
             </select> -->
-            <div id="translate-window">
-              <label>Translate Stuff</label>
 
-              <div>
-                <span>
-                  <div class="input-field col s12">
-                    <select id='sourceLangSelect' class="browser-default">
-                      <option value="" disabled selected>Source Language</option>
-                      <option value="en">English</option>
-                      <option value="es">Spanish</option>
-                      <option value="fr">French</option>
-                      <option value="zh-CN">Chinese</option>
+            <!--Translate -->
 
-                    </select>
-                  </div>
-                </span>
-                <span>
-                  <div class="input-field col s12">
-                    <select id='targetLangSelect' class="browser-default">
-                      <option value="" disabled selected>Target Language</option>
-                      <option value="en">English</option>
-                      <option value="es">Spanish</option>
-                      <option value="fr">French</option>
-                      <option value="zh-CN">Chinese</option>
-                    </select>
-                  </div>
-                </span>
-              </div>
+            <ul class="collapsible" data-collapsible="accordion">
+                <li>
+                    <div class="collapsible-header"><span style="color:red;">Translate Tool</span><i class="material-icons" style="color:red;">compare_arrows</i></div>
+                    <div class="collapsible-body">
+                        <div class="row">
+                            <div class="input-field col s6 m6 l6">
+                                <select id='sourceLangSelect'>
+                                    <option value="" disabled selected>Input Language</option>
+                                    <option value="en">English</option>
+                                    <option value="es">Spanish</option>
+                                    <option value="fr">French</option>
+                                    <option value="zh-CN">Chinese</option>
+                                    </select>
+                            </div>
+                            <div class="input-field col s6 m6 l6">
+                                <select id='targetLangSelect'>
+                                    <option value="" disabled selected>Output Language</option>
+                                    <option value="en">English</option>
+                                    <option value="es">Spanish</option>
+                                    <option value="fr">French</option>
+                                    <option value="zh-CN">Chinese</option>
+                                    </select>
+                            </div>
+                        </div>
 
-              <div class="input-field col s12">
-                <textarea id="translateSourceText" class="materialize-textarea"></textarea>
-                <label for="textarea1">Source Text</label>
-              </div>
-              <button id="translateSourceTextButton" class="btn waves-light waves-effect red lighten-1">
-                      <span class="translate">Translate</span>
-                      <i class="material-icons right">translate</i>
-              </button>
+                        <div class="input-field col s12 m12 l12">
+                            <textarea id="translateSourceText" class="materialize-textarea"></textarea>
+                            <label for="translateSourceText">Enter the word or phrase you wish to translate here...</label>
+                        </div>
+                        <button id="translateSourceTextButton" class="btn waves-light waves-effect red lighten-1 col s12 m12 l12">
+                            <span class="translate">Translate</span>
+                            <i class="material-icons right">translate</i>
+                        </button>
+                        <div class="row">
+                            <p id="translatedText" class="col s12 m12 l12"></p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+            <!--<div id="translate-window">
+                
 
-              <p id="translatedText">
-                Translated Text Here.
-              </p>
-
-            </div>
+            </div>-->
         </div>
     </div>
     </span>
@@ -248,6 +248,26 @@
     </script>
 
     <script src="scripts/ez-translate.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('select').material_select();
+            $('.collapsible').collapsible({
+                accordion: false // A setting that changes the collapsible behavior to expandable instead of the default accordion style
+            });
+
+            $('.collapsible .collapsible-header').on('click', function (event) {
+                var target = $(this);
+                setTimeout(function () {
+                    if (target.length) {
+                        event.preventDefault();
+                        $("#chat").animate({
+                            scrollTop: $('#chat').prop("scrollHeight")
+                        }, 1000);
+                    }
+                }, 300);
+            });
+        });
+    </script>
 
     <!-- The main page script -->
     <script src="scripts/pages/dashboard.js"></script>
@@ -270,7 +290,6 @@
     <script src="scripts/bind-translate.js"></script>
 
     <script>
-
         // console.log("select "+document.getElementById('my-cool-select').style.display+" ?");
     </script>
 
