--- a/landingpage.html
+++ b/landingpage.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<meta(charset="utf-8")/>
+<meta(charset="utf-8">
 <title>Landing Page</title>	
 <meta(name="viewport" content="witdth=device-width,initial-scale=1")/>
 <link(rel="stylesheet" href="landingpage.css")/>
@@ -11,14 +11,15 @@
 <body>
 <header>
 <div class="header">
-<h1><center>Welcome to World Without Walls</center></h1>	
+<h1><center>Welcome to World Without Walls</center></h1>
+</div>	
+<div>
 <h4><center>The Inovative Messaging Website</center></h4>
+</div>
 </header>
-<img src-"Desktop/goldengatebridge.jpg"></img>
+
 
 
 </body>
-
-
 
 </html>
