--- a/dashboard.html
+++ b/dashboard.html
@@ -69,10 +69,11 @@
         <a href="#" data-activates="mobile-demo" class="button-collapse" id="button-collapse"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li>
-                <a href="aboutpage.html">About</a>
+                <!-- <a href="aboutpage.html">About</a> -->
+                <a id="user-name" href=# hidden>Username</a>
             </li>
             <li>
-                <a class="dropdown-button" href="#!" data-activates="user-dropdown" id="user-pic"></a>
+                <a class="dropdown-button" href="#!" data-activates="user-dropdown" id="user-pic" hidden></a>
             </li>
         </ul>
         <ul class="side-nav" id="mobile-demo">
