--- a/landingpage.html
+++ b/landingpage.html
@@ -2,24 +2,21 @@
 <html>
 
 <head>
-<meta(charset="utf-8">
+<meta charset="utf-8">
 <title>Landing Page</title>	
-<meta(name="viewport" content="witdth=device-width,initial-scale=1")/>
-<link(rel="stylesheet" href="landingpage.css")/>
+<meta name="viewport" content="witdth=device-width,initial-scale=1")/>
+<link rel="stylesheet" type="text/css" href="landingpage.css")/>
 </head>
 
 <body>
-<header>
-<div class="header">
+<section class="intro">
+<div class="inner">
+<div class="content">
 <h1><center>Welcome to World Without Walls</center></h1>
-</div>	
-<div>
-<h4><center>The Inovative Messaging Website</center></h4>
+<a class="btn" href="file:///C:/Users/Kyle/Desktop/penpal-app-web/login.html">Get Started</a>
 </div>
-</header>
-
-
-
+</div>
+</section>
+<p><center>The Inovative Messaging Website</center></p>
 </body>
-
 </html>
