Changed some code to the Landing,About,andFounders Page

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -46,6 +46,7 @@
 Click on me to display Date and Time</button><br><br>
 -->
         <!-- Page Content goes here  -->
+        <!--
         <div class="container">
 
         <p style="text-align:left;">Website Topic Summary:</p>
@@ -55,16 +56,17 @@ Click on me to display Date and Time</button><br><br>
     <li>Description</li><br>
     <li>Description</li><br>
     </ol>
-
-<h3><center>About</center></h3>
+-->
+<h4><center>About</center></h4>
+<div class="container"
 
  <p style="text-align:left;" class="flow-text">
 
-    <p>"If you talk to a man in a language he understands, that goes to his head. If you talk to him in his own language, that goes to his heart."<br><br>
+    <p class="flow-text">"If you talk to a man in a language he understands, that goes to his head. If you talk to him in his own language, that goes to his heart."<br><br>
 
         Nelson Mandela</p><br>
 
-<p>World Without Walls will be a service that upgrades the old pen pal concept with instant messaging that young people are used to today in the form of an online chat app. Especially in the case of foreign language education, this is fantastic because it allows students to improve their language skills while having fun by conversing with native speakers their age. Certain tools will also be implemented that make this type of communication easier such as the ability to translate just an individual word or phrase, grammar checks, and speech to text.</p>
+<p class="flow-text">World Without Walls will be a service that upgrades the old pen pal concept with instant messaging that young people are used to today in the form of an online chat app. Especially in the case of foreign language education, this is fantastic because it allows students to improve their language skills while having fun by conversing with native speakers their age. Certain tools will also be implemented that make this type of communication easier such as the ability to translate just an individual word or phrase, grammar checks, and speech to text.</p>
         </div><br><br>
 
         
