--- a/landingpage.html
+++ b/landingpage.html
@@ -6,17 +6,24 @@
 <title>Landing Page</title>	
 <meta name="viewport" content="witdth=device-width,initial-scale=1")/>
 <link rel="stylesheet" type="text/css" href="landingpage.css")/>
+
+<!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
+
 </head>
 
 <body>
 <section class="intro">
 <div class="inner">
 <div class="content">
-<h1><center>Welcome to World Without Walls</center></h1>
-<a class="btn" href="file:///C:/Users/Kyle/Desktop/penpal-app-web/login.html">Get Started</a>
+<h1><center>Welcome to World Without Walls</center></h1><br>
+<a class="waves-effect waves-light btn-large" href="file:///C:/Users/Kyle/Desktop/penpal-app-web/login.html"><i class="material-icons">Get Started</i></a><br><br>
+<a class="waves-effect waves-light btn" href="file:///C:/Users/Kyle/Desktop/penpal-app-web/aboutpage.html" class="btn" onclick="Materialize.fadeInImage('#staggered-test')">More Info</a>
 </div>
 </div>
 </section>
-<p><center>The Inovative Messaging Website</center></p>
 </body>
 </html>
